# oscLab

clab1/ex2/: ex2.h
clab2/: ex1Func.c  ex1Head.h
clab3/ex1/: dplist.c  ex1  program.c
clab3/ex1 backup/: CMakeLists.txt  dplist.c  dplist.h
clab3/milestone1/: dplist.c
ex2/: Makefile  ex2  ex2.c  ex2Func.c
final_project/: Makefile  config.h  connmgr.c  connmgr.h  data.csv  datamgr.c  datamgr.h  logger.c  main.c  sbuffer.c  sbuffer.h  sensor_data  sensor_db.c  sensor_db.h  sensor_gateway  test3.sh  test5.sh
final_project/lib/: dplist.c  dplist.h
homework2/: hellofunc.c  hellofunc.h  hellomain.c
plab1/: CMakeLists.txt
plab1/startcode2023plab1/: datamgr.c
plab1/startcode2023plab1/lib/: dplist.c
plab2_milestone2/: test
plab2_milestone2/ex1/: sensor_db.c  sensor_db.csv  sensor_db.h
plab2_milestone2/ex2/: Makefile  functions.c  functions.h  main.c
plab2_milestone2/milestone2/: logger.c  sensor_db.c  sensor_db.csv  test  test.c
plab3/: sensor_node  test_server  test_server.c
plab4/: Makefile  main.c  sbuffer.c  sensor_data_out.csv
